# CGpt

./: .gitignore  README.md  launch_all.sh  project.sh
ensembl-mcp/: README.md  app.py  demo.py  demo_pre_questions.py  ensembl_client_server.py  evaluate.py  launch.sh  mcp_implementation.py  requirements.txt  run_server.py
ensembl-mcp/client/: ensembl_client.py
ensembl-mcp/ensembl_mcp_server/: server.py
ensembl-mcp/ensembl_mcp_server/api/: ensembl.py
ensembl-mcp/tests/: test_ensembl_api.py
shared/gene-function/: README.md  RNA_GO.py  build_lookuptable.py  main.py  pyproject.toml  requirements.txt
shared/gene-function/SANSPANZ.3/: predictions.html
shared/gene-function/res/: annotation_RNA.out  dog_RNA_dict.csv  dog_genome_dict.csv
shared/gene-function/test/test_data/: test_pept.fasta
shared/gene-function/test_data/: test_pept.fasta
shared/gene-function/utils/: build_lookuptable.py  genes_annotations.py
visualizer/: Fetch_gene_family_information_from_HGNC_website.py  README.md  fuzzy.py  launch.sh  main.py  pyproject.toml  search_routes.py  server.py
visualizer/cgpt-visualizer-website/: .gitignore  package-lock.json  package.json
visualizer/cgpt-visualizer-website/public/: index.html  manifest.json
visualizer/cgpt-visualizer-website/src/: App.css  App.js  ChatbotWidget.js  GenomeBrowser.js
visualizer/scripts/: create_annotation_db.py  create_chromosome_dbs.py  sequence.py  split_gff.py
visualizer/src/: exploration.py  main.py  simple_load_one_chromosome.py
