[project]
name = "gene-function"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastcluster<=1.2.6",
    "requests<=2.32.3",
    "scipy<=1.15.2",
    "numpy<1.20",
    "pandas>=1.3.3",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "tqdm>=4.67.1",
]
